# final_ame

./: CMakeLists.txt  README.md  cnn_4classes_HAR.ipynb
data/: DATASET.md
include/: mpu6050.h
model/: cnn_raw_har_model.h
src/: main.cpp  mpu6050.cpp
